force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Account__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>