force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Campaign__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>