force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Case__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>