force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Completed__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Completed__c</fullName>
    <description>The number of completed tasks of the Action Plan</description>
    <inlineHelpText>The number of completed tasks of the Action Plan</inlineHelpText>
    <label>Completed</label>
    <summaryFilterItems>
        <field>LabsActionPlans__APTask__c.LabsActionPlans__IsClosed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>LabsActionPlans__APTask__c.LabsActionPlans__Action_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>