force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Contact__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>