force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Contract__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Contract</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>