force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Description__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Description__c</fullName>
    <description>The description of the Action Plan.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>