force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Lead__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>