force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>