force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Plan_Progress__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Plan_Progress__c</fullName>
    <description>Completed tasks vs total tasks</description>
    <formula>IF(LabsActionPlans__Total__c != 0,
(LabsActionPlans__Completed__c) / LabsActionPlans__Total__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>