force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Related_Object__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Related_Object__c</fullName>
    <description>The LABEL of the related object for this Action Plan. Used for related lists and other references</description>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>