force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Related_Record__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Related_Record__c</fullName>
    <description>The displayed field (Name for most objects) of the related record for the Action Plan.</description>
    <label>Related Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>