force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__SkipWeekends__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__SkipWeekends__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, tasks included in an Action Plan will not be given a Due Date that falls on a weekend or non-working day.</description>
    <inlineHelpText>Automatically reschedules a task that would fall on a non-working day to either before or after.</inlineHelpText>
    <label>Avoid Weekends For Due Dates</label>
    <type>Checkbox</type>
</CustomField>