force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__StartDate__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The Start Date of the Action Plan</description>
    <inlineHelpText>The Start Date of the Action Plan</inlineHelpText>
    <label>Plan Start Date</label>
    <type>Date</type>
</CustomField>