force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Task_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Task_Status_Formula__c</fullName>
    <description>Display the number of completed tasks and total tasks for this Action Plan</description>
    <formula>TEXT(LabsActionPlans__Completed__c ) &amp; &quot; &quot; &amp;  $Label.labsactionplans__ap_of &amp; &quot; &quot; &amp;  text(LabsActionPlans__Total__c) &amp; &quot; &quot; &amp;  $Label.labsactionplans__ap_TasksComplete</formula>
    <label>Action Plan Status</label>
    <type>Text</type>
</CustomField>