force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__TaskRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__TaskRecordTypeID__c</fullName>
    <description>The Record Type Id (not label) of the Tasks for this Action Plan</description>
    <label>Tasks Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>