force-app/main/default/objects/LabsActionPlans__ActionPlan__c/fields/LabsActionPlans__Total__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Total__c</fullName>
    <description>The total number of tasks on the Action Plan.</description>
    <inlineHelpText>The total number of tasks on the Action Plan.</inlineHelpText>
    <label>Total Tasks</label>
    <summaryForeignKey>LabsActionPlans__APTask__c.LabsActionPlans__Action_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>