force-app/main/default/objects/LabsActionPlans__ActionPlan__c/validationRules/LabsActionPlans__Cannot_clear_Template_field.validationRule-meta.xml
<ValidationRule>
    <fullName>LabsActionPlans__Cannot_clear_Template_field</fullName>
    <active>true</active>
    <description>Once set, the Action Plan Template field cannot be changed. (It can be cleared by deleting the template.)</description>
    <errorConditionFormula>!ISBLANK(  PRIORVALUE( LabsActionPlans__Action_Plan_Template__c ) )
&amp;&amp;
(ISBLANK( LabsActionPlans__Action_Plan_Template__c ) || ISCHANGED(  LabsActionPlans__Action_Plan_Template__c ))</errorConditionFormula>
    <errorMessage>Cannot change Template value once it is set</errorMessage>
</ValidationRule>