force-app/main/default/objects/LabsActionPlans__ActionPlan__c/validationRules/LabsActionPlans__Skip_Weekend_Due_Date_Dependency.validationRule-meta.xml
<ValidationRule>
    <fullName>LabsActionPlans__Skip_Weekend_Due_Date_Dependency</fullName>
    <active>true</active>
    <description>If Skip Weekends is selected, must choose a skip day (activate if not using field dependency for checkbox and picklist fields)</description>
    <errorConditionFormula>(LabsActionPlans__SkipWeekends__c &amp;&amp; ISPICKVAL(LabsActionPlans__SkipDay__c, &quot;&quot;))
||
(!LabsActionPlans__SkipWeekends__c &amp;&amp; !ISPICKVAL(LabsActionPlans__SkipDay__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>LabsActionPlans__SkipDay__c</errorDisplayField>
    <errorMessage>If Skip Weekends is selected, must choose a skip day; if it is not selected, do not choose a skip day</errorMessage>
</ValidationRule>