force-app/main/default/objects/LabsActionPlans__ActionPlan__c/listViews/LabsActionPlans__All.listView-meta.xml
<ListView>
    <fullName>LabsActionPlans__All</fullName>
    <columns>NAME</columns>
    <columns>LabsActionPlans__Task_Status_Formula__c</columns>
    <columns>LabsActionPlans__Related_Object__c</columns>
    <columns>LabsActionPlans__Related_Record__c</columns>
    <columns>LabsActionPlans__Action_Plan_Template__c</columns>
    <columns>LabsActionPlans__Plan_Progress__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>